// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title Snapshot Body1 1`] = `
<body>
  <div>
    <span
      class="ant-typography sc-1w8sy4l-4 eCvLbJ"
    >
      body1
    </span>
  </div>
</body>
`;

exports[`Title Snapshot H1 1`] = `
<body>
  <div>
    <h1
      class="sc-1w8sy4l-0 gLtrfo"
    >
      h1
    </h1>
  </div>
</body>
`;

exports[`Title Snapshot H2 1`] = `
<body>
  <div>
    <h2
      class="sc-1w8sy4l-1 jvZYzV"
    >
      h2
    </h2>
  </div>
</body>
`;

exports[`Title Snapshot H3 1`] = `
<body>
  <div>
    <h3
      class="sc-1w8sy4l-2 becLfm"
    >
      h3
    </h3>
  </div>
</body>
`;

exports[`Title Snapshot H4 1`] = `
<body>
  <div>
    <h4
      class="sc-1w8sy4l-3 eMXnhL"
    >
      h4
    </h4>
  </div>
</body>
`;
